--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -57,6 +57,9 @@
   // margin: 5px;
 }
 
+.test-name-table:last-child {
+  border-bottom: rgb(231, 230, 230) 1px solid;
+}
 
 .main-container {
   display: flex;
