--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -84,27 +84,35 @@
             <br>
 
             <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                5 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5" max="10">
+                3 <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="3" max="10">
                 10 <br>
             </div>
             <label for="volume">{{rankingScaleValue}}</label>
-            <hr>
+            <!-- <hr> -->
 
         </div>
 
-        <div>
-            <mat-form-field appearance="outline">
+        <div style="display: flex;flex-direction: column;gap: 1px;">
+            <!-- <mat-form-field appearance="outline">
                 <mat-label>choose criteria</mat-label>
                 <mat-select multiple [(ngModel)]="selectedCriteria"
                     (selectionChange)="criteriaSelection(selectedCriteria)">
                     <mat-option *ngFor="let cirteriaItem of CRITERIA" [value]="cirteriaItem">{{cirteriaItem.name}}
                     </mat-option>
                 </mat-select>
-            </mat-form-field>
+            </mat-form-field> -->
+            <mat-radio-group aria-label="Select an option" [(ngModel)]="rankingType" 
+            (change)="rankingTableType(rankingType)">
+            <div style="display: flex;flex-direction: column;gap: 1px;">
+                <mat-radio-button value="dropDown">Drop-Down</mat-radio-button>
+                <mat-radio-button value="dragAndDrop">Drag & Drop</mat-radio-button>
+                <mat-radio-button value="radio">Radio Butons</mat-radio-button></div>
+              </mat-radio-group>
+          
         </div>
 
         <div>
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">CHOOSE RATING ICON</div>
+            <!-- <div style="font-size: 16px;margin-top: 10px;color: #48535e;">CHOOSE RATING ICON</div>
             <br>
             <mat-radio-group aria-label="Select an option" [(ngModel)]="ratingScaleIcon">
                 <mat-icon style="color:#76d354;">grade</mat-icon>
@@ -114,7 +122,7 @@
                 <mat-radio-button value="settings_cell">
                 </mat-radio-button>
             </mat-radio-group>
-            <hr>
+            <hr> -->
         </div>
 
         <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
@@ -167,19 +175,27 @@
 <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
 
+<!--💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲 TABLE GENERATOR 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
+<div style="display: flex;flex-direction: column;padding-left: 40px;">
 
-<div class="scroller-style main-container" dragula="DRAGGABLE_RANK_ROW" [(dragulaModel)]="bmxItem.componentText"
+    <div style="font-size: 25px;color: #324395;padding-bottom: 10px;">{{bmxItem.componentSettings[0].categoryName}}
+    </div>
+    <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
+        {{bmxItem.componentSettings[0].categoryDescription}}</div>
+
+</div>
+<div class="scroller-style main-container" [dragula]="draggableBag" [(dragulaModel)]="bmxItem.componentText"
     (dragulaModelChange)="checkDragEvetn($event);">
     <div *ngFor="let testName of bmxItem.componentText; let y = index">
 
         <div class="test-name-table" style="cursor: grab;">
 
             <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-            <div style="min-width: 200px;background-color:white;display: flex;align-items: center;
+            <div *ngIf="isdropDown" style="min-width: 200px;background-color:white;display: flex;align-items: center;
             justify-content: center;border-left: rgb(231, 230, 230) 1px solid;
             border-right: rgb(231, 230, 230) 1px solid;border-top: rgb(231, 230, 230) 1px solid;">
                 <div *ngIf="(y !== 0)">
-                    <mat-form-field appearance="outline" style="width: 130px;">
+                    <mat-form-field appearance="outline" style="width: 130px;padding-top: 13px;height: 80px;">
                         <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
                         <mat-select matNativeControl [(ngModel)]="bmxItem.componentText[y].RATE"
                             (selectionChange)="setRating(bmxItem.componentText[y].RATE,y)">
@@ -206,7 +222,7 @@
                     (mouseleave)="selectedColumn = ''">
 
                     <!-- IF YOU WANT TO DELET ALL COLUMNS PASS THE COLUMN NAME  NOT testName[columnName]-->
-                    <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon"
+                    <span *ngIf="selectedColumn === e && bmxClientPageOverview && !editSingleTableCells" class="header-delete-icon"
                         matTooltip="double click to delete column" matTooltipPosition="above"
                         (dblclick)="deleteColumn(columnName)">x</span>
 
@@ -240,8 +256,9 @@
                 <div>
 
                     <!-- IF ELSE TEMPLATE INPUTS  -->
-                    <input *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true" type="radio" [name]="'rank'+ y"
-                        [checked]="testName[columnName]" (change)="saveRadioColumValue(columnName, y)">
+                    <input *ngIf="y !== 0  &&  columnName.includes('RadioColumn') == true" type="radio"
+                        [name]="columnName + i" [checked]="testName[columnName]"
+                        (change)="saveRadioColumValue(columnName, y)">
 
 
                     <!-- TEXT_AREA COLUMN-->
@@ -269,15 +286,17 @@
                 </div>
                 <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
             </div>
+            <div *ngIf="(y !== 0) && bmxClientPageOverview" style="min-width: 100px; position: absolute;right: 0px;">
+                <button style="outline: none;margin:3px -8px;" (dblclick)="deletRow(y)" mat-icon-button  matTooltip="doble click to delete row" matTooltipPosition="left"
+                    aria-label="ranking">
+                    <mat-icon>delete_outline</mat-icon>
+                </button>
+            </div>
         </div>
 
 
         <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
-        <div *ngIf="(y !== 0) && bmxClientPageOverview" style="min-width: 100px; position: absolute;right: 0px;">
-            <button style="outline: none;margin:3px -8px;" (click)="deletRow(y)" mat-icon-button aria-label="ranking">
-                <mat-icon>delete_outline</mat-icon>
-            </button>
-        </div>
+       
         <!--♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️ END TABLE ROW ICONS ♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️♦️-->
     </div>
 </div>
