--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -302,7 +302,7 @@
                 </button>
             </div> -->
             <div *ngIf="(y !== 0) && bmxClientPageOverview" style="min-width: 100px; position: absolute;right: 0px;">
-                <button style="outline: none;margin:3px -8px;" (click)="deletRow(y)" mat-icon-button
+                <button style="outline: none;margin:3px -8px;" (dblclick)="deletRow(y)" mat-icon-button  matTooltip="doble click to delete row" matTooltipPosition="left"
                     aria-label="ranking">
                     <mat-icon>delete_outline</mat-icon>
                 </button>
